@@ -297,7 +297,7 @@ public class TestPlugins {
         try {
             for (TestPackage testPackage : TestPackage.values()) {
                 if (pluginJars.containsKey(testPackage)) {
-                    log.debug("Skipping recompilation of " + testPackage.resourceDir());
+                    log.debug("Skipping recompilation of {}", testPackage.resourceDir());
                 }
                 pluginJars.put(testPackage, createPluginJar(testPackage.resourceDir(), testPackage.removeRuntimeClasses(), Collections.emptyMap()));
             }
@@ -377,9 +377,7 @@ public class TestPlugins {
     }
 
     public static Function<ClassLoader, LoaderSwap> noOpLoaderSwap() {
-        return classLoader -> {
-            return new LoaderSwap(Thread.currentThread().getContextClassLoader());
-        };
+        return classLoader -> new LoaderSwap(Thread.currentThread().getContextClassLoader());
     }
 
     private static TestPlugin[] defaultPlugins() {
@@ -432,7 +430,7 @@ public class TestPlugins {
             classFiles = stream
                     .sorted(Comparator.reverseOrder())
                     .map(Path::toFile)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         for (File classFile : classFiles) {
             if (!classFile.delete()) {
@@ -460,7 +458,7 @@ public class TestPlugins {
                     .filter(Files::isRegularFile)
                     .map(Path::toFile)
                     .filter(file -> file.getName().endsWith(".java"))
-                    .map(file -> copyAndReplace(file, replacements))
+                    .map(file -> replacements.isEmpty() ? file : copyAndReplace(file, replacements))
                     .collect(Collectors.toList());
         }
 
@@ -488,9 +486,6 @@ public class TestPlugins {
     }
 
     private static File copyAndReplace(File source, Map<String, String> replacements) throws RuntimeException {
-        if (replacements.isEmpty()) {
-            return source;
-        }
         try {
             String content = Files.readString(source.toPath());
             for (Map.Entry<String, String> entry : replacements.entrySet()) {
@@ -498,6 +493,7 @@ public class TestPlugins {
             }
             File tmpFile = new File(System.getProperty("java.io.tmpdir") + File.separator + source.getName());
             Files.writeString(tmpFile.toPath(), content);
+            tmpFile.deleteOnExit();
             return tmpFile;
         } catch (IOException e) {
             throw new RuntimeException("Could not copy and replace file: " + source, e);
@@ -511,7 +507,7 @@ public class TestPlugins {
                     .filter(Files::isRegularFile)
                     .filter(path -> !path.toFile().getName().endsWith(".java"))
                     .filter(path -> !removeRuntimeClasses.test(path.toFile().getName()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         for (Path path : paths) {
             try (InputStream in = new BufferedInputStream(Files.newInputStream(path))) {
