@@ -24,13 +24,13 @@ import org.apache.kafka.metadata.ConfigRepository;
 import org.apache.kafka.server.config.ServerLogConfigs;
 import org.apache.kafka.server.util.Scheduler;
 import org.apache.kafka.storage.internals.log.CleanerConfig;
+import org.apache.kafka.storage.internals.log.LogCleaner;
 import org.apache.kafka.storage.internals.log.LogConfig;
 import org.apache.kafka.storage.internals.log.LogDirFailureChannel;
 import org.apache.kafka.storage.internals.log.ProducerStateManagerConfig;
 import org.apache.kafka.storage.log.metrics.BrokerTopicStats;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import scala.jdk.javaapi.CollectionConverters;
@@ -39,7 +39,7 @@ import scala.jdk.javaapi.CollectionConverters;
 public class LogManagerBuilder {
     private static final int PRODUCER_ID_EXPIRATION_CHECK_INTERVAL_MS = 600000;
     private List<File> logDirs = null;
-    private List<File> initialOfflineDirs = Collections.emptyList();
+    private List<File> initialOfflineDirs = List.of();
     private ConfigRepository configRepository = null;
     private LogConfig initialDefaultConfig = null;
     private CleanerConfig cleanerConfig = null;
@@ -173,6 +173,8 @@ public class LogManagerBuilder {
                               logDirFailureChannel,
                               time,
                               remoteStorageSystemEnable,
-                              initialTaskDelayMs);
+                              initialTaskDelayMs,
+                              LogCleaner::new
+                );
     }
 }
