@@ -39,7 +39,6 @@ import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.OptionalInt;
@@ -97,12 +96,15 @@ public final class SnapshotFileReader implements AutoCloseable {
             return;
         }
         FileChannelRecordBatch batch = batchIterator.next();
+        lastOffset = batch.lastOffset();
+        if (!batchIterator.hasNext()) {
+            highWaterMark = OptionalLong.of(lastOffset);
+        }
         if (batch.isControlBatch()) {
             handleControlBatch(batch);
         } else {
             handleMetadataBatch(batch);
         }
-        lastOffset = batch.lastOffset();
         scheduleHandleNextBatch();
     }
 
@@ -162,7 +164,7 @@ public final class SnapshotFileReader implements AutoCloseable {
         }
         listener.handleCommit(
             MemoryBatchReader.of(
-                Collections.singletonList(
+                List.of(
                     Batch.data(
                         batch.baseOffset(),
                         batch.partitionLeaderEpoch(),
@@ -188,8 +190,6 @@ public final class SnapshotFileReader implements AutoCloseable {
     class ShutdownEvent implements EventQueue.Event {
         @Override
         public void run() throws Exception {
-            // Expose the high water mark only once we've shut down.
-            highWaterMark = OptionalLong.of(lastOffset);
 
             if (fileRecords != null) {
                 fileRecords.close();
@@ -208,9 +208,5 @@ public final class SnapshotFileReader implements AutoCloseable {
     public void close() throws Exception {
         beginShutdown("closing");
         queue.close();
-    }
-
-    public CompletableFuture<Void> caughtUpFuture() {
-        return caughtUpFuture;
     }
 }
