@@ -19,7 +19,6 @@ package org.apache.kafka.server.log.remote.metadata.storage;
 import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.test.TestUtils;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -45,8 +44,7 @@ public class RemoteLogMetadataManagerTestUtils {
 
     public static class Builder {
         private String bootstrapServers;
-        private boolean startConsumerThread;
-        private Map<String, Object> overrideRemoteLogMetadataManagerProps = Collections.emptyMap();
+        private Map<String, Object> overrideRemoteLogMetadataManagerProps = Map.of();
         private Supplier<RemotePartitionMetadataStore> remotePartitionMetadataStore = RemotePartitionMetadataStore::new;
         private Function<Integer, RemoteLogMetadataTopicPartitioner> remoteLogMetadataTopicPartitioner = RemoteLogMetadataTopicPartitioner::new;
 
@@ -55,11 +53,6 @@ public class RemoteLogMetadataManagerTestUtils {
 
         public Builder bootstrapServers(String bootstrapServers) {
             this.bootstrapServers = Objects.requireNonNull(bootstrapServers);
-            return this;
-        }
-
-        public Builder startConsumerThread(boolean startConsumerThread) {
-            this.startConsumerThread = startConsumerThread;
             return this;
         }
 
@@ -82,8 +75,7 @@ public class RemoteLogMetadataManagerTestUtils {
             Objects.requireNonNull(bootstrapServers);
             String logDir = TestUtils.tempDirectory("rlmm_segs_").getAbsolutePath();
             TopicBasedRemoteLogMetadataManager topicBasedRemoteLogMetadataManager =
-                new TopicBasedRemoteLogMetadataManager(startConsumerThread,
-                    remoteLogMetadataTopicPartitioner, remotePartitionMetadataStore);
+                new TopicBasedRemoteLogMetadataManager(remoteLogMetadataTopicPartitioner, remotePartitionMetadataStore);
 
             // Initialize TopicBasedRemoteLogMetadataManager.
             Map<String, Object> configs = new HashMap<>();
